# soem-xenomai

./: CMakeLists.txt  README.md
rt_task_xeno/: CMakeLists.txt  rt_task_xeno.c  rt_task_xeno.cpp
